# AzureSpherePlantMonitor

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  app_manifest.json  climatesensor.c  climatesensor.h  humidity.c  humidity.h  main.c  poll.c  poll.h  pulse.c  pulse.h  soilmoisture.c  soilmoisture.h
HardwareDefinitions/avnet_mt3620_sk/: plant_sk.json
HardwareDefinitions/avnet_mt3620_sk/inc/hw/: plant_sk.h
HardwareDefinitions/mt3620_rdb/: template_appliance.json
HardwareDefinitions/seeed_mt3620_mdb/: template_appliance.json
hw/avnet_mt3620_sk/inc/hw/: plant_sk.h
lib/chirp/inc/: chirp.h
lib/chirp/src/: chirp.c
lib/climate/inc/: climatesensor.h  lps22hh_reg.h
lib/climate/src/: climatesensor.c  lps22hh_reg.c
lib/event_loop_event/inc/: event_loop_event.h
lib/event_loop_event/src/: event_loop_event.c
lib/event_loop_timer/inc/: event_loop_timer.h
lib/event_loop_timer/src/: event_loop_timer.c
lib/humidity/inc/: humidity.h
lib/humidity/src/: humidity.c
